@@ -24,6 +24,10 @@ Unreleased
 - Made the name of the logo image configurable (so that it can be a PNG
   rather than a GIF).
 
+- LP #398940, LP #398951: Added spelling checker for TinyMCE editor.  This
+  requires the ``aspell`` command.  Please see the buildout README.txt for
+  instructions on installing Aspell.
+
 3.5.1 (2009-07-17)
 ------------------
 
